--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@ body{
     background-color: blanchedalmond;
     text-align: center;    
     font-family: Arial;
-    color: deeppink;
+    color: #333;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
 div{
@@ -10,4 +13,17 @@ div{
     border-style: double;
     border-color: burlywood;
     margin: 1em;
+}
+
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border:  1px solid #DDD;
+    margin:  0 auto;
+}
+
+#container h2 {
+    font-size:  20px;
+
 }
