--- a/style.css
+++ b/style.css
@@ -7,6 +7,23 @@ body{
     margin: 0;
     padding: 0;
 }
+#cabecera{
+    background: #33A;    
+    box-shadow: 0px 5px 10px rgb(0,0,0,0.75);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline{
+    margin: 1em 0.0.0;
+    font-weight: normal;
+    font-size: 0.8em;
+
+
+} 
+
 #container{
     width: 70%;
     padding: 1em;
