--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: blanchedalmond;
     text-align: center;    
-    font-family: 'Courier New';
+    font-family: 'Arial';
     color: #333;
     font-size: 16px;
     margin: 0;
