--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     background-color: blanchedalmond;
     text-align: center;    
     font-family: 'Arial';
-    color: #333;
+    color: red ;
     font-size: 16px;
     margin: 0;
     padding: 0;
