--- a/style.css
+++ b/style.css
@@ -8,14 +8,18 @@ body{
     padding: 0;
 }
 #cabecera{
-    background: #33A;    
+    background: #37488b;
     box-shadow: 0px 5px 10px rgb(0,0,0,0.75);
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0.5em 2em;
 }
 
+#cabecera #logo {
+    width: 20px;
+    vertical-align: middle;
+}
 #cabecera #tagline{
     margin: 1em 0.0.0;
     font-weight: normal;
@@ -35,4 +39,8 @@ body{
 #container h2 {
     font-size:  20px;
 
+}
+#post{
+    background: white;
+    padding: 1em;
 }
