--- a/style.css
+++ b/style.css
@@ -36,3 +36,12 @@ body{
     font-size:  20px;
 
 }
+
+#footer
+{
+  background : #777;
+  color:white;
+  text-align : center;
+  padding : 1em; 
+}
+
